<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.beangle.hibernate</groupId>
  <artifactId>beangle-hibernate-core</artifactId>
  <packaging>jar</packaging>
  <version>7.2.0.CR3</version>
  <name>Hibernate Orm Core-Patched</name>
  <description>
    Hibernate Orm Core Shade,Support Scala Collection
  </description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <mvn.gpg.version>1.6</mvn.gpg.version>
    <mvn.jar.version>3.2.0</mvn.jar.version>
    <mvn.compiler.version>3.8.1</mvn.compiler.version>
    <mvn.javadoc.version>3.2.0</mvn.javadoc.version>
    <additionalparam>-Xdoclint:none</additionalparam>
    <hibernate.version>7.2.0.CR3</hibernate.version>
  </properties>

  <licenses>
    <license>
      <name>GNU Lesser General Public License</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
    </license>
  </licenses>

  <url>http://beangle.github.io</url>

  <scm>
    <connection>scm:git:git://github.com/beangle/hibernate.git</connection>
    <developerConnection>scm:git:git@github.com:beangle/hibernate.git</developerConnection>
    <url>https://github.com/beangle/hibernate</url>
  </scm>

  <developers>
    <developer>
      <id>hibernate-team</id>
      <name>The Hibernate Development Team</name>
      <organization>Hibernate.org</organization>
      <organizationUrl>https://hibernate.org</organizationUrl>
    </developer>
  </developers>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>[2.17.1, 3)</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>*</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.checkerframework</groupId>
      <artifactId>checker-qual</artifactId>
      <version>3.47.0</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
      <version>3.2.0</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>jakarta.transaction</groupId>
      <artifactId>jakarta.transaction-api</artifactId>
      <version>2.0.1</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.jboss.logging</groupId>
      <artifactId>jboss-logging</artifactId>
      <version>3.6.1.Final</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.hibernate.models</groupId>
      <artifactId>hibernate-models</artifactId>
      <version>1.0.1</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.fasterxml</groupId>
      <artifactId>classmate</artifactId>
      <version>1.7.0</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy</artifactId>
      <version>1.17.6</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!--
    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>4.0.2</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>4.0.5</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    -->
    <dependency>
      <groupId>jakarta.inject</groupId>
      <artifactId>jakarta.inject-api</artifactId>
      <version>2.0.1</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>4.13.2</version>
      <scope>runtime</scope>
      <exclusions>
        <exclusion>
          <groupId>xml-apis</groupId>
          <artifactId>xml-apis</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <build>
    <defaultGoal>clean install</defaultGoal>
    <plugins>
      <!-- central发布插件 -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.6.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${mvn.compiler.version}</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <release>${java.version}</release>
          <encoding>${project.build.sourceEncoding}</encoding>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <createDependencyReducedPom>true</createDependencyReducedPom>
              <createSourcesJar>true</createSourcesJar>
              <shadeSourcesContent>false</shadeSourcesContent>
              <artifactSet>
                <includes>
                  <include>org.hibernate.orm:hibernate-core</include>
                </includes>
              </artifactSet>
              <filters>
                <filter>
                  <artifact>org.hibernate.orm:hibernate-core</artifact>
                  <excludes>
                    <exclude>org/hibernate/action/internal/CollectionUpdateAction</exclude>
                    <exclude>org/hibernate/boot/internal/SessionFactoryOptionsBuilder</exclude>

                    <exclude>org/hibernate/collection/spi/AbstractPersistentCollection*</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentArrayHolder</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentBag*</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentCollection*</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentIdentifierBag*</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentList*</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentMap*</exclude>
                    <exclude>org/hibernate/collection/spi/PersistentSet*</exclude>

                    <exclude>org/hibernate/metamodel/internal/BaseAttributeMetadata</exclude>
                    <exclude>org/hibernate/metamodel/internal/PluralAttributeMetadataImpl*</exclude>
                    <exclude>org/hibernate/metamodel/model/domain/internal/PluralAttributeBuilder</exclude>

                    <exclude>org/hibernate/sql/results/graph/collection/internal/ListInitializer</exclude>
                    <exclude>org/hibernate/sql/results/graph/collection/internal/MapInitializer</exclude>
                    <exclude>org/hibernate/sql/results/graph/collection/internal/SetInitializer</exclude>
                  </excludes>
                </filter>
                <filter>
                  <artifact>org.beangle.hibernate:beangle-hibernate-core</artifact>
                  <excludes>
                    <exclude>META-INF/MANIFEST.MF</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${mvn.jar.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${mvn.javadoc.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <doclint>none</doclint>
          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
          <charset>UTF-8</charset>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>beangle-release</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${mvn.gpg.version}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
